tests/security/taintedCurlSetOpt/output.txt
ERROR: TaintedData - input.hack:2:31 - Data from a URL query string found its way to a curl header